--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* minimal css reset */
 html {
   box-sizing: border-box;
@@ -110,8 +109,23 @@ img {
 .tube-severe,
 .tube-part {
   color: red;
-=======
-.sentence{
+}
+
+.tube-reason {
+  transition: all 1s ;
+  max-height: 666px;
+}
+.reason-text {
+  padding: 0.5em;
+}
+.tube-shrunk-reason {
+  max-height: 0;
+  overflow-y: hidden;
+}
+
+
+
+  .sentence{
   background-color: red;
   width: 500px;
   height: 20px;
@@ -124,5 +138,4 @@ img {
   height: 200px;
   position: absolute;
   z-index: -1;
->>>>>>> master
 }
