--- a/style.css
+++ b/style.css
@@ -36,13 +36,16 @@ img {
 
 body {
   background-color: #d799af;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 section {
   background-color: white;
   padding: 1rem;
   border-radius: 1rem;
-
-  max-width: 900px;
+ /* min-width: 300px; */
+  max-width: 800px;
   margin:1rem;
 }
 
@@ -50,6 +53,7 @@ section {
   font-family: "Open Sans", sans-serif;
   padding: 1em;
   font-size: 1em;
+  max-width: 400px;
 }
 
 .tube-line-ul {
