--- a/style.css
+++ b/style.css
@@ -46,26 +46,32 @@ section {
   border-radius: 1rem;
  /* min-width: 300px; */
   max-width: 800px;
-  margin:1rem;
+  margin:0.5rem;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-section {
+  flex-grow:1;
+  display: flex;
+  align-items: center;
+}
 .tube-section {
   font-family: "Open Sans", sans-serif;
   padding: 1em;
   font-size: 1em;
-  max-width: 400px;
 }
 
 .tube-line-ul {
   display: flex;
   flex-direction: column;
-  /* border: 0.1em solid black; */
 }
 
 .tube-line-li {
   display: flex;
-  /* border-bottom: 1px solid grey; */
-  /* min-height: 3.5em; */
 }
 
 .tube-line-name,
@@ -182,23 +188,7 @@ section {
   align-items: flex-end;
   position: relative;
 }
-/* 
-.sentence p {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 800;
-  font-size: 2rem;
-  color: #fff;
-  padding: 2em;
-  -webkit-text-stroke: 0.1rem #000;
-  text-align: center;
-}
 
-.image {
-  background-size: cover;
-  padding: 1em;
-  z-index: -1;
-}
-*/
 .sentence {
   position: absolute;
 } 
@@ -216,12 +206,28 @@ section {
 
 .image {
   background-size: cover;
-  padding: 1em;
-  /* z-index: -1; */
+  border-radius: 1rem;
 }
 
 
 .intro {
   padding: 1em;
   font-family: sans-serif;
+}
+
+@media only screen and (min-width: 600px){
+  .tube-section {
+    max-width: 800px;
+  }
+ }
+
+@media only screen and (min-width: 900px){
+
+ section {
+
+   max-width: 400px;
+ }
+ .tube-section {
+   max-width: 400px;
+ }
 }
