--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ section {
 }
 
 .tube-reason {
-  transition: all 1s ;
-  transition-timing-function: ease-in;
-  max-height: 600px;
+  transition: all 0.5 s ;
+  transition-timing-function: ease-in-out;
+  max-height: 400px;
   /* border-bottom: 1px solid grey; */
   overflow-y: hidden;
 }
@@ -191,6 +191,7 @@ section {
 
 .sentence {
   position: absolute;
+  left:0; 
 } 
 
 .sentence p {
@@ -198,10 +199,11 @@ section {
   font-weight: 800;
   font-size: 1.5rem;
   color: #fff;
-  padding: 0.5em;
+  padding: 1rem;
   margin-bottom: 1em;
   -webkit-text-stroke: 0.1rem #000;
   text-align: center;
+  max-width: 100%;
 }
 
 .image {
@@ -222,7 +224,9 @@ section {
  }
 
 @media only screen and (min-width: 900px){
-
+ body {
+   padding: 2rem;
+ }
  section {
 
    max-width: 400px;
